updated lab files

--- a/Lab_2/src/calibrate.ipynb
+++ b/Lab_2/src/calibrate.ipynb
@@ -88,7 +88,7 @@
     "The calibration returns:\n",
     "- `ret`: Mean reprojection error in pixels (lower is better)\n",
     "- `K`: The 3×3 camera intrinsic matrix\n",
-    "- `dist`: Distortion coefficients (k₁, k₂, p₁, p₂, k₃, ...)\n",
+    "- `dist`: Distortion coefficients (k₁, k₂, k₃, p₁, p₂, ...)\n",
     "- `rvecs`, `tvecs`: Rotation and translation vectors for each calibration frame"
    ]
   },
@@ -128,8 +128,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Calculate errors as in your code\n",
     "errors = []\n",
-    "\n",
     "if mode == 'checker':\n",
     "    # project each object point into the image\n",
     "    for objp, imgp, rvec, tvec in zip(objpoints, imgpoints, rvecs, tvecs):\n",
@@ -142,33 +142,14 @@
     "        proj, _ = cv2.projectPoints(ch_corners, rvec, tvec, K, dist)\n",
     "        err = np.linalg.norm(proj.reshape(-1,2) - ch_corners.reshape(-1,2), axis=1)\n",
     "        errors.extend(err)\n",
-    "\n",
     "errors = np.array(errors)\n",
     "print(f\"Total points: {len(errors)}, mean error = {errors.mean():.4f} px\")\n",
     "\n",
-    "plt.figure(figsize=(6,4))\n",
-    "plt.hist(errors, bins=50, range=(0, np.percentile(errors,99)))\n",
-    "plt.title(\"Reprojection Error Distribution\")\n",
-    "plt.xlabel(\"Error (px)\")\n",
-    "plt.ylabel(\"Number of points\")\n",
-    "plt.grid(True)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Gather radial distances and corresponding errors\n",
     "radial = []\n",
-    "for fname in []: pass  # placeholder; we can reuse corners or compute directly\n",
-    "\n",
-    "# Instead, recompute radial distances from principal point:\n",
-    "cx, cy = K[0,2], K[1,2]\n",
-    "pts = []\n",
     "errs = []\n",
+    "cx, cy = K[0,2], K[1,2]\n",
+    "\n",
     "if mode == 'checker':\n",
     "    for objp, imgp, rvec, tvec in zip(objpoints, imgpoints, rvecs, tvecs):\n",
     "        proj, _ = cv2.projectPoints(objp, rvec, tvec, K, dist)\n",
@@ -185,15 +166,28 @@
     "        for p_proj, p_corn in zip(flat_proj, flat_corn):\n",
     "            radial.append(np.linalg.norm(p_corn - np.array([cx, cy])))\n",
     "            errs.append(np.linalg.norm(p_proj - p_corn))\n",
-    "\n",
     "radial = np.array(radial)\n",
-    "errs   = np.array(errs)\n",
+    "errs = np.array(errs)\n",
     "\n",
-    "plt.figure(figsize=(6,4))\n",
-    "plt.scatter(radial, errs, s=2, alpha=0.3)\n",
-    "plt.title(\"Radial Error vs. Distance from Center\")\n",
-    "plt.xlabel(\"Radius (px)\")\n",
-    "plt.ylabel(\"Error (px)\")\n",
+    "# Create a combined figure with two subplots side by side\n",
+    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(12, 4))\n",
+    "\n",
+    "# Plot 1: Histogram\n",
+    "ax1.hist(errors, bins=50, range=(0, np.percentile(errors, 99)))\n",
+    "ax1.set_title(\"Reprojection Error Distribution\")\n",
+    "ax1.set_xlabel(\"Error (px)\")\n",
+    "ax1.set_ylabel(\"Number of points\")\n",
+    "ax1.grid(True)\n",
+    "\n",
+    "# Plot 2: Scatter plot\n",
+    "ax2.scatter(radial, errs, s=2, alpha=0.3)\n",
+    "ax2.set_title(\"Radial Error vs. Distance from Center\")\n",
+    "ax2.set_xlabel(\"Radius (px)\")\n",
+    "ax2.set_ylabel(\"Error (px)\")\n",
+    "ax2.grid(True)\n",
+    "\n",
+    "# Adjust layout and show\n",
+    "plt.tight_layout()\n",
     "plt.show()"
    ]
   },
@@ -354,18 +348,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Try-it-yourself ✏️  \n",
-    "Use the sliders below to perturb the **radial (k₁, k₂)** and **tangential (p₁, p₂)** distortion\n",
+    "## Try-it-yourself ✏️\n",
+    "\n",
+    "This interactive visualization has two tabs to explore different camera parameters:\n",
+    "\n",
+    "### Tab 1: Distortion Parameters\n",
+    "Use the sliders to perturb the **radial (k₁, k₂, k₃)** and **tangential (p₁, p₂)** distortion\n",
     "coefficients and watch how the *red* re-projected corners shift relative to the *green*\n",
     "detected ones.\n",
     "\n",
-    "* Questions to think about  \n",
-    "  1. When you nudge **k₁** positively, which image region moves the most?  \n",
-    "  2. Which coefficient mainly shears the pattern rather than radial-expands it?  \n",
-    "  3. At what coefficient values do the re-projected dots best coincide with the detections?  \n",
+    "### Tab 2: Intrinsic Parameters\n",
+    "Experiment with the camera's intrinsic parameters **focal length (fx, fy)** and **principal point (cx, cy)** \n",
+    "to see how they affect the projection geometry.\n",
     "\n",
-    "Remember: in a real calibration workflow we optimise these coefficients so that the\n",
-    "re-projection error (pixel distance between the two sets of dots) is minimised."
+    "* Questions to think about\n",
+    "1. When you nudge **k₁** positively, which image region moves the most?\n",
+    "2. Which coefficient mainly shears the pattern rather than radial-expands it?\n",
+    "3. How does changing **fx** differ from changing **fy** in terms of projection effects?\n",
+    "4. What happens to the projection when you shift the principal point (cx, cy)?\n",
+    "5. At what parameter values do the re-projected dots best coincide with the detections?\n",
+    "\n",
+    "Remember: In a real calibration workflow, we optimize both intrinsic and distortion parameters \n",
+    "to minimize the re-projection error (pixel distance between the two sets of dots)."
    ]
   },
   {
@@ -374,52 +378,97 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! pip install ipywidgets\n",
+    "! pip install -q ipywidgets > /dev/null 2>&1\n",
     "import ipywidgets as widgets\n",
-    "from ipywidgets import interactive, HBox, VBox, Button\n",
+    "from ipywidgets import interactive, HBox, VBox, Button, Tab\n",
+    "from IPython.display import HTML\n",
     "import matplotlib.pyplot as plt\n",
     "import cv2\n",
     "import numpy as np\n",
     "\n",
-    "# --- objects prepared earlier -----------------\n",
-    "# K, dist, objp, imgp, rvec, tvec, viz_img\n",
-    "# ---------------------------------------------\n",
-    "\n",
-    "# ❶ Create the sliders\n",
-    "\n",
-    "def make_slider(label, value, coarse_factor=3.0, fine_step=1e-3,\n",
-    "                hard_max=5.0):\n",
+    "def make_slider(label, value, coarse_factor=3.0, fine_step=1e-3, hard_max=5.0):\n",
     "    \"\"\"\n",
-    "    Return a FloatSlider centred at 0 whose ±range equals\n",
-    "    min(hard_max, coarse_factor*|value|) but never < 0.05.\n",
+    "    Return a FloatSlider centred at value with range determined by coarse_factor.\n",
     "    \"\"\"\n",
     "    span = max(abs(value) * coarse_factor, 0.05)\n",
     "    span = min(span, hard_max)\n",
     "    return widgets.FloatSlider(\n",
     "        value=float(value),\n",
-    "        min=-span,\n",
-    "        max= span,\n",
+    "        min=value-span,\n",
+    "        max=value+span,\n",
     "        step=fine_step,\n",
     "        description=label\n",
     "    )\n",
     "\n",
-    "# 1️⃣ Sliders for all five coefficients\n",
+    "# --- Distortion parameter sliders ---\n",
     "k1_slider = make_slider('k₁', dist[0][0])\n",
     "k2_slider = make_slider('k₂', dist[0][1])\n",
     "p1_slider = make_slider('p₁', dist[0][2], coarse_factor=3.0, fine_step=1e-4, hard_max=0.2)\n",
     "p2_slider = make_slider('p₂', dist[0][3], coarse_factor=3.0, fine_step=1e-4, hard_max=0.2)\n",
     "k3_slider = make_slider('k₃', dist[0][4], coarse_factor=1.5, fine_step=1e-2, hard_max=10)\n",
     "\n",
-    "# 2️⃣ Reset button\n",
-    "reset_btn = Button(description=\"Reset ↺\", tooltip=\"Restore calibrated values\")\n",
+    "# --- Intrinsic parameter sliders ---\n",
+    "# fx_slider = make_slider('fx', K[0,0], coarse_factor=0.2, fine_step=5.0)\n",
+    "# fy_slider = make_slider('fy', K[1,1], coarse_factor=0.2, fine_step=5.0)\n",
+    "# cx_slider = make_slider('cx', K[0,2], coarse_factor=0.2, fine_step=1.0)\n",
+    "# cy_slider = make_slider('cy', K[1,2], coarse_factor=0.2, fine_step=1.0)\n",
+    "fx_slider = widgets.FloatSlider(\n",
+    "    value=float(K[0,0]),\n",
+    "    min=K[0,0]*0.8,  # 20% decrease\n",
+    "    max=K[0,0]*1.2,  # 20% increase\n",
+    "    step=1.0,        # Finer step\n",
+    "    description='fx',\n",
+    "    style={'description_width': 'initial'}\n",
+    ")\n",
     "\n",
-    "def reset_sliders(_):\n",
+    "fy_slider = widgets.FloatSlider(\n",
+    "    value=float(K[1,1]),\n",
+    "    min=K[1,1]*0.8,\n",
+    "    max=K[1,1]*1.2,\n",
+    "    step=1.0,\n",
+    "    description='fy',\n",
+    "    style={'description_width': 'initial'}\n",
+    ")\n",
+    "\n",
+    "# For principal point - wider range with finer steps\n",
+    "cx_slider = widgets.FloatSlider(\n",
+    "    value=float(K[0,2]),\n",
+    "    min=K[0,2]-50,\n",
+    "    max=K[0,2]+50,\n",
+    "    step=0.5,\n",
+    "    description='cx',\n",
+    "    style={'description_width': 'initial'}\n",
+    ")\n",
+    "\n",
+    "cy_slider = widgets.FloatSlider(\n",
+    "    value=float(K[1,2]),\n",
+    "    min=K[1,2]-50,\n",
+    "    max=K[1,2]+50,\n",
+    "    step=0.5,\n",
+    "    description='cy',\n",
+    "    style={'description_width': 'initial'}\n",
+    ")\n",
+    "\n",
+    "# --- Reset buttons ---\n",
+    "reset_dist_btn = Button(description=\"Reset Distortion\", tooltip=\"Restore calibrated distortion values\")\n",
+    "reset_intr_btn = Button(description=\"Reset Intrinsics\", tooltip=\"Restore calibrated intrinsic values\")\n",
+    "\n",
+    "def reset_dist_sliders(_):\n",
     "    for s, val in zip([k1_slider, k2_slider, p1_slider, p2_slider, k3_slider], dist[0]):\n",
     "        s.value = float(val)\n",
-    "reset_btn.on_click(reset_sliders)\n",
+    "        \n",
+    "def reset_intr_sliders(_):\n",
+    "    fx_slider.value = float(K[0,0])\n",
+    "    fy_slider.value = float(K[1,1])\n",
+    "    cx_slider.value = float(K[0,2])\n",
+    "    cy_slider.value = float(K[1,2])\n",
+    "    \n",
+    "reset_dist_btn.on_click(reset_dist_sliders)\n",
+    "reset_intr_btn.on_click(reset_intr_sliders)\n",
     "\n",
-    "# 3️⃣ Projection visualisation\n",
-    "def show_projection(k1, k2, p1, p2, k3):\n",
+    "# --- Projection visualization functions ---\n",
+    "def show_projection_dist(k1, k2, p1, p2, k3):\n",
+    "    \"\"\"Visualize effects of distortion parameters\"\"\"\n",
     "    d = np.array([k1, k2, p1, p2, k3], dtype=np.float64)\n",
     "    proj_pts, _ = cv2.projectPoints(objp, rvec, tvec, K, d)\n",
     "    proj_pts = proj_pts.reshape(-1, 2)\n",
@@ -427,22 +476,68 @@
     "    vis = viz_img.copy()\n",
     "    for (x, y), (u, v) in zip(imgp, proj_pts):\n",
     "        cv2.circle(vis, (int(x), int(y)), 4, (0, 255, 0), 2)   # detected\n",
-    "        cv2.circle(vis, (int(u), int(v)), 3, (0,   0, 255), 2) # re-projected\n",
+    "        cv2.circle(vis, (int(u), int(v)), 3, (0, 0, 255), 2)   # re-projected\n",
     "\n",
     "    plt.figure(figsize=(6, 5))\n",
     "    plt.imshow(cv2.cvtColor(vis, cv2.COLOR_BGR2RGB))\n",
+    "    plt.title(\"Distortion Parameter Effects\")\n",
     "    plt.axis('off')\n",
     "    plt.show()\n",
     "\n",
-    "# 4️⃣ Bind sliders to plotting function\n",
-    "interactive_plot = interactive(\n",
-    "    show_projection,\n",
+    "def show_projection_intr(fx, fy, cx, cy):\n",
+    "    \"\"\"Visualize effects of intrinsic parameters\"\"\"\n",
+    "    # Create modified camera matrix\n",
+    "    modified_K = K.copy()\n",
+    "    modified_K[0,0] = fx  # focal length x\n",
+    "    modified_K[1,1] = fy  # focal length y\n",
+    "    modified_K[0,2] = cx  # principal point x\n",
+    "    modified_K[1,2] = cy  # principal point y\n",
+    "    \n",
+    "    proj_pts, _ = cv2.projectPoints(objp, rvec, tvec, modified_K, dist)\n",
+    "    proj_pts = proj_pts.reshape(-1, 2)\n",
+    "\n",
+    "    vis = viz_img.copy()\n",
+    "    for (x, y), (u, v) in zip(imgp, proj_pts):\n",
+    "        cv2.circle(vis, (int(x), int(y)), 4, (0, 255, 0), 2)   # detected\n",
+    "        cv2.circle(vis, (int(u), int(v)), 3, (0, 0, 255), 2)   # re-projected\n",
+    "\n",
+    "    plt.figure(figsize=(6, 5))\n",
+    "    plt.imshow(cv2.cvtColor(vis, cv2.COLOR_BGR2RGB))\n",
+    "    plt.title(\"Intrinsic Parameter Effects\")\n",
+    "    plt.axis('off')\n",
+    "    plt.show()\n",
+    "\n",
+    "# --- Create interactive widgets ---\n",
+    "interactive_dist = interactive(\n",
+    "    show_projection_dist,\n",
     "    k1=k1_slider, k2=k2_slider, k3=k3_slider,\n",
     "    p1=p1_slider, p2=p2_slider\n",
     ")\n",
     "\n",
-    "# 5️⃣ Display UI\n",
-    "display(VBox([HBox([reset_btn]), interactive_plot]))"
+    "interactive_intr = interactive(\n",
+    "    show_projection_intr,\n",
+    "    fx=fx_slider, fy=fy_slider, cx=cx_slider, cy=cy_slider\n",
+    ")\n",
+    "\n",
+    "# --- Create tabbed interface ---\n",
+    "tab = Tab()\n",
+    "tab.children = [\n",
+    "    VBox([HBox([reset_dist_btn]), interactive_dist]),\n",
+    "    VBox([HBox([reset_intr_btn]), interactive_intr])\n",
+    "]\n",
+    "tab.set_title(0, 'Distortion Parameters')\n",
+    "tab.set_title(1, 'Intrinsic Parameters')\n",
+    "\n",
+    "style = \"\"\"\n",
+    "    <style>\n",
+    "    .jupyter-widgets.widget-tab .p-TabBar-tabLabel {\n",
+    "        color: black;\n",
+    "        font-weight: bold;\n",
+    "    }\n",
+    "    </style>\n",
+    "\"\"\"\n",
+    "display(HTML(style))\n",
+    "display(tab)"
    ]
   },
   {
