--- a/Lab_2/src/calibrate.ipynb
+++ b/Lab_2/src/calibrate.ipynb
@@ -580,8 +580,8 @@
     "| **k₁** | 1st radial distortion | Barrel / pincushion curvature that grows ∝ *r²* |\n",
     "| **k₂** | 2nd radial distortion | Higher-order tweak that exaggerates the edge warping introduced by **k₁** |\n",
     "| **k₃** | 3rd radial distortion | Cubic radial term—dominates in the extreme corners when **k₁**, **k₂** can’t fully correct |\n",
-    "| **p₁** | Tangential (x-shear) | Skews dots left/right when the lens & sensor are not perfectly parallel |\n",
-    "| **p₂** | Tangential (y-shear) | Skews dots up/down under the same mis-alignment |\n",
+    "| **p₂** | Tangential (x-shear) | Skews dots left/right when the lens & sensor are not perfectly parallel |\n",
+    "| **p₁** | Tangential (y-shear) | Skews dots up/down under the same mis-alignment |\n",
     "\n",
     "*Here \\(r^2 = x^2 + y^2\\) is the squared, normalised image-plane radius.*\n",
     "\n",
